--- a/res/layout/dialog.xml
+++ b/res/layout/dialog.xml
@@ -1,41 +1,71 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:gravity = "center"
+>
 
+    <TextView
+        
+        android:id="@+id/textView_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="enter this choice's title" />
+
+    <EditText
+        
+        android:id="@+id/EditText2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        
+        android:ems="10"
+        android:hint="plese insert choice title here :3"
+        android:inputType="textPersonName"
+        >
+        <requestFocus />
+    </EditText>
+    <TextView
+        android:id="@+id/textView_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="enter this choice's detail" />
+    
+    
     <EditText
         android:id="@+id/editText1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="92dp"
+        android:layout_marginBottom="50dp"
         android:ems="10"
-        android:hint="plese insert text here :3"
+        android:hint="plese insert detail of choice here :3"
         android:inputType="textPersonName" >
 
         <requestFocus />
     </EditText>
 
-    <Button
-        android:id="@+id/btnloadToListView"
+    
+<RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" >
+    <TextView
+        android:id="@+id/textView_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="14dp"
-        android:text="btnLoad" />
-
+        android:text="enter this choice's title" />
     <Button
         android:id="@+id/btnLoadImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:text="btnBrowse Image" />
+        android:layout_toRightOf="@id/textView_img"
+        android:text="choose img from camera or sdcard" />
+    </RelativeLayout>
 
     <ImageView
         android:id="@+id/imageView_dia"
@@ -47,14 +77,14 @@
         android:layout_toLeftOf="@+id/btnLoadImage"
         android:src="@drawable/ic_launcher" />
 
-    <EditText
-        android:id="@+id/EditText2"
+    <Button
+        android:id="@+id/btnloadToListView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btnLoadImage"
-        android:layout_below="@+id/btnLoadImage"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="71dp"
-        android:text="EditText" />
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="14dp"
+        android:text="enter this choice!!" />
 
-</RelativeLayout>
+</LinearLayout>
