--- a/res/layout/listview_for_p17.xml
+++ b/res/layout/listview_for_p17.xml
@@ -43,6 +43,7 @@
    				 android:layout_width="wrap_content"
    	 			android:layout_height="wrap_content"
     			 android:layout_alignParentLeft="true"
+    			 android:text="vote"
                       android:layout_alignParentTop="true" 
     			 android:layout_alignBottom="@+id/imageView_choice"
    				 android:clickable="true"
