--- a/res/layout/p16.xml
+++ b/res/layout/p16.xml
@@ -1,25 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget0"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent" >
+    <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="500dp" >
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity = "center"
-     >
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical" >
+
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:orientation="vertical" >
-        <ScrollView
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent" >
-
-            <LinearLayout
-                android:layout_width="fill_parent"
-                android:layout_height="500dp"
-                android:orientation="vertical" >
         
-        <TextView
+                <TextView
             android:id="@+id/Title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,18 +66,15 @@
             android:layout_height="wrap_content" >
         </TextSwitcher>
     </LinearLayout>
-		<TextView
-        	android:id="@+id/textView_show"
-        	android:layout_width="wrap_content"
-        	android:layout_height="wrap_content"
-        	android:text="click shoice to view larger" />
+
         <Gallery
             android:id="@+id/gallery"
             android:layout_width="fill_parent"
-            android:layout_height="100dp"
+            android:layout_height="50dp"
         />
 
-       
+        
+
                 <TextView
                     android:id="@+id/textView1"
                     android:layout_width="120dip"
@@ -119,21 +114,16 @@
                     android:layout_width="fill_parent"
                     android:layout_height="150dp" />
 
-                
-            <TextView
-                    android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="show other's command"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-        
-        
-		<ListView
+                <ListView
+                    android:id="@+id/widget34"
+                    android:layout_width="fill_parent"
+                    android:layout_height="200dp" >
+                </ListView>
+<ListView
             android:id="@+id/list_for_command"
             android:layout_width="fill_parent"
             android:layout_height="100dp"
         />
-		
         <LinearLayout
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" >
@@ -155,11 +145,13 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="delete" />
-            
         </LinearLayout>
-		</LinearLayout>
-       </ScrollView>
-    </LinearLayout>
 
-</LinearLayout>
+            </LinearLayout>
+              </LinearLayout>
+        </ScrollView>
+  
+
    
+
+</AbsoluteLayout>
