--- a/res/layout/p14_main.xml
+++ b/res/layout/p14_main.xml
@@ -1,17 +1,23 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Add_choice_MainActivity" >
+    android:orientation="vertical"
+    android:gravity = "center"
+>
+ <ScrollView
+            android:layout_width="fill_parent"
+            android:layout_height="500dp" >
+
+            <LinearLayout
+                android:layout_width="fill_parent"
+                android:layout_height="fill_parent"
+                android:orientation="vertical" >
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
         android:layout_alignLeft="@+id/imageView1"
         android:layout_centerVertical="true"
         android:text="Large Text"
@@ -19,8 +25,8 @@
 
     <ImageView
         android:id="@+id/imageView1"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="1dp"
+        android:layout_height="1dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:layout_marginLeft="21dp"
@@ -34,7 +40,7 @@
         android:layout_alignLeft="@+id/textView1"
         android:layout_alignParentTop="true"
         android:layout_marginTop="46dp"
-        android:text="show dialog Fragment :v" />
+        android:text="add choice ^^" />
 
     <TextView
         android:id="@+id/textView2"
@@ -44,20 +50,10 @@
         android:layout_below="@+id/imageView1"
         android:layout_marginTop="36dp"
         android:text="TextView" />
- <Gallery
-  android:id="@+id/gallery"
-    android:layout_width="300dp"
-        android:layout_height="200dp"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginLeft="21dp"
-        android:layout_marginTop="15dp"
-    />
 
- 
  <ListView
-         android:layout_width="200dp"
-        android:layout_height="200dp"
+         android:layout_width="300dp"
+        android:layout_height="400dp"
         android:layout_alignParentLeft="true"
         android:layout_below="@+id/textView1"
         android:layout_marginLeft="21dp"
@@ -67,5 +63,10 @@
         android:id="@+id/button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="preview" />
-</RelativeLayout>
+        android:text="preview the whole Q" />
+
+
+              </LinearLayout>
+        </ScrollView>
+  
+</LinearLayout>
