--- a/res/layout/ask_btn.xml
+++ b/res/layout/ask_btn.xml
@@ -3,14 +3,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <ScrollView
-android:layout_height="400px"
-android:layout_width="fill_parent">
-
-<LinearLayout
-android:orientation="vertical"
-android:layout_width="fill_parent"
-android:layout_height="fill_parent">
 
     <TextView
         android:id="@+id/textView1"
@@ -33,17 +25,21 @@ android:layout_height="fill_parent">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="description of Q" />
-        
 
     <EditText
         android:id="@+id/editText2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName" >
-        <requestFocus />
-    </EditText>
+        android:inputType="textPersonName" />
+<ScrollView
+android:layout_height="500px"
+android:layout_width="fill_parent">
 
+<LinearLayout
+android:orientation="vertical"
+android:layout_width="fill_parent"
+android:layout_height="fill_parent">
     <TextView
         android:id="@+id/textView3"
         android:layout_width="wrap_content"
@@ -261,6 +257,12 @@ android:layout_height="fill_parent">
         android:text="ToggleButton" />
     
     
+    
+    
+    
+    
+    
+    
      <TextView
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
@@ -296,7 +298,8 @@ android:layout_height="fill_parent">
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="" />
-
+</LinearLayout>
+</ScrollView>
 <TextView
     	android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content" 
@@ -308,18 +311,29 @@ android:layout_height="fill_parent">
 	    android:layout_height="wrap_content" 
 	    android:text="選擇時間!"
 	    android:id="@+id/dateButton"
+	    
+    />
+ <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" >
+<TextView
+    	android:layout_width="wrap_content" 
+	    android:layout_height="wrap_content" 
+	    android:text="your finish time is:"
+	    android:id="@+id/date_show"
+	    
     />
     <TextView
     	android:layout_width="wrap_content" 
 	    android:layout_height="wrap_content" 
 	    android:id="@+id/dateText"
     />
+      </LinearLayout>
+    
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="choose choice" />
-    </LinearLayout>
-</ScrollView>
 
 </LinearLayout>
