--- a/res/layout/fragment_changeperson_1.xml
+++ b/res/layout/fragment_changeperson_1.xml
@@ -114,15 +114,24 @@
             android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
             android:layout_marginLeft="17dp"
-            android:text="年齡" />
-
-        <EditText
-            android:id="@+id/age"
-            android:layout_width="wrap_content"
+            android:text="生日" />
+		<TextView
+    		android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:ems="10" />
+            android:text="生日"
+	  		android:id="@+id/dateText"
+   	 />
+        
+        <Button
+            android:id="@+id/button_date"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_toRightOf="@+id/dateText"
+            android:ems="3"
+            android:inputType="date"
+            android:text="Date" />
 
     </RelativeLayout>
       <RelativeLayout
@@ -137,14 +146,25 @@
             android:layout_alignParentTop="true"
             android:layout_marginLeft="17dp"
             android:text="性別" />
-
-        <EditText
-            android:id="@+id/sex"
-            android:layout_width="wrap_content"
+        <TextView
+    		android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:ems="10" />
+            android:text="sexual"
+	  		android:id="@+id/sexual"
+   	 />
+        
+
+        <Spinner
+        android:id="@+id/spinnner"
+        android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+       
+        >
+    </Spinner>
 
     </RelativeLayout>
       <RelativeLayout
